--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-pip install pandas
-pip install numpy
-pip install matplotlib
-pip install seaborn
-pip install scikit-learn
+pandas
+numpy
+matplotlib
+seaborn
+scikit-learn
+xgboost
